Refactor modules -> components
